css/styles.css
/* CSS file, created by heathology, https://heathology.github.io/, on 7.17.2002. 
Gradient buttons adapted from Zach Cole (https://codepen.io/zachacole/pen/KdGzgb).*/

body {
    font-family: Helvetica, sans-serif;
}

/* logo */
.logo {
    display: block;
    margin-left: auto;
    margin-right: auto;
	width: 100%;
	height: auto;
	max-width: 336px;
}

h1, p {
    text-align: center; 
}

/* Main Content Container */
.content {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    padding: 20px;
    max-width: 520px;
    color: #000000;
    text-align: center;
}

@media (max-width: 576px) {
	.content {
		width: 50%;
	  }
	 
  }
  
  @media (max-width: 768px) {
	.content {
	  width: 50%;
	}
	
}
/* 2778x1284 pixels at 458ppi */
@media only screen 
    and (device-width: 428px) 
    and (device-height: 926px) 
    and (-webkit-device-pixel-ratio: 3) { 
	
	}

/* Project Navigation Links */
.nav {
    text-align: center;
}

/* infite gradient shift on hover buttons */

#outer
{
    width:100%;
    text-align: center;
}

.inner
{
    display: inline-block;
}

.button-container {
	text-align: center;
	position: relative;
	width: 220px;
	margin: 0 0 15px auto;
	cursor: pointer;
}

.button-container a {
    display: block;
}

button {
	position: relative;
	height: 50px;
	width: 180px;
	border: 0;
	border-radius: 5px;
	text-transform: uppercase;
	font-size: 12px;
	letter-spacing: 0.2em;
	overflow: hidden;
	box-shadow: 0 4px 12px 0 rgba(152, 160, 180, 10);
	z-index: -2;
    display: inline-block;
	color:aliceblue;
}


.fill-one {
	position: absolute;
	background-image: linear-gradient(to right, #E040FB, #00BCD4);
	background-size: 150% 150%;
	height: 70px;
	width: 320px;
	border-radius: 5px;
	margin: -40px 0 0 -140px;
	z-index: -2;
	transition: all 0.4s ease;
}

.button-container-one:hover .fill-one {
	-webkit-transform: translateX(100px);
	-moz-transform: translateX(100px);
	transform: translateX(100px);
}

.fill-two {
	position: absolute;
	background-image: linear-gradient(to right, #E040FB, #00BCD4);
	background-size: 150% 150%;
	height: 70px;
	width: 320px;
	border-radius: 5px;
	margin: -40px 0 0 -140px;
	z-index: -2;
	transition: all 0.4s ease;
}

.button-container-two:hover .fill-two {
	-webkit-transform: translateX(100px);
	-moz-transform: translateX(100px);
	transform: translateX(100px);
}

.fill-three {
	position: absolute;
	background-image: linear-gradient(to right, #E040FB, #00BCD4);
	background-size: 150% 150%;
	height: 70px;
	width: 320px;
	border-radius: 5px;
	margin: -40px 0 0 -140px;
	z-index: -2;
	transition: all 0.4s ease;
}

.button-container-three:hover .fill-three {
	-webkit-transform: translateX(100px);
	-moz-transform: translateX(100px);
	transform: translateX(100px);
}

.fill-four {
	position: absolute;
	background-image: linear-gradient(to right, #E040FB, #00BCD4);
	background-size: 150% 150%;
	height: 70px;
	width: 320px;
	border-radius: 5px;
	margin: -40px 0 0 -140px;
	z-index: -2;
	transition: all 0.4s ease;
}

.button-container-four:hover .fill-four {
	-webkit-transform: translateX(100px);
	-moz-transform: translateX(100px);
	transform: translateX(100px);
}

.fill-five {
	position: absolute;
	background-image: linear-gradient(to right, #E040FB, #00BCD4);
	background-size: 150% 150%;
	height: 70px;
	width: 320px;
	border-radius: 5px;
	margin: -40px 0 0 -140px;
	z-index: -2;
	transition: all 0.4s ease;
}

.button-container-five:hover .fill-five {
	-webkit-transform: translateX(100px);
	-moz-transform: translateX(100px);
	transform: translateX(100px);
}

.fill-six {
	position: absolute;
	background-image: linear-gradient(to right, #E040FB, #00BCD4);
	background-size: 150% 150%;
	height: 70px;
	width: 320px;
	border-radius: 5px;
	margin: -40px 0 0 -140px;
	z-index: -2;
	transition: all 0.4s ease;
}

.button-container-six:hover .fill-six {
	-webkit-transform: translateX(100px);
	-moz-transform: translateX(100px);
	transform: translateX(100px);
}

@-webkit-keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

@-moz-keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

